<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS History Faker</string>
    <string name="menu_settings">Settings</string>
    <string name="tofrom">To / From</string>
    <string name="message">Message</string>
    <string name="addto">Add To</string>
    <string name="addtohistort">Add to History</string>
    <string name="markread">Mark as Read</string>
    <string name="addat">Add To Message History At</string>
    <string name="sent">Sent</string>
    <string name="inbox">Inbox</string>
    <string name="MessageAdded">Message Added to History</string>
    <string name="AddFake">Fake SMS</string>

</resources>